# connectedhomeip

./: .gitlab-ci.yml
build_overrides/: talaria.gni
config/talaria/: BUILD.gn  CHIPProjectConfig.h  SystemProjectConfig.h  common.gni
docs/guides/talaria/: README.md
examples/air-quality-sensor-app/talaria/: 1_gn_build.sh  2_gn_load.sh  BUILD.gn  Dockerfile  Makefile  README.md  a_gn_activate.sh  args.gni  entrypoint.sh  main.cpp  test.cpp
examples/air-quality-sensor-app/talaria/data-model/: air-quality-sensor-app.matter  air-quality-sensor-app.zap
examples/air-quality-sensor-app/talaria/include/: CHIPProjectAppConfig.h
examples/contact-sensor-app/talaria/: 2_gn_load.sh  BUILD.gn  Makefile  README.md  args.gni  main.cpp  test.cpp
examples/contact-sensor-app/talaria/data-model/: contact-sensor-app.matter  contact-sensor-app.zap
examples/contact-sensor-app/talaria/include/: CHIPProjectAppConfig.h
examples/light-switch-app/talaria/: 2_gn_load.sh  BUILD.gn  BindingHandler.cpp  BindingHandler.h  Makefile  README.md  a_gn_activate.sh  args.gni  command_line_interface.cpp  main.cpp  test.cpp
examples/light-switch-app/talaria/data-model/: light-switch-app.matter  light-switch-app.zap
examples/light-switch-app/talaria/gn_links/: 0  3  crypto  platform
examples/light-switch-app/talaria/inc/: LightSwitch_ProjecConfig.h
examples/light-switch-app/talaria/include/: CHIPProjectAppConfig.h
examples/lighting-app/talaria/: .cproject  2_gn_load.sh  4_gn_link.sh  BUILD.gn  Makefile  README.md  access.h  args.gni  endpoint_config.h  gen_config.h  main.cpp  main_1.cpp  test.cpp
examples/lighting-app/talaria/data-model/: lighting-app.matter  lighting-app.zap
examples/lighting-app/talaria/gn_links/: 1  2  a  talaria
examples/lighting-app/talaria/include/: CHIPProjectAppConfig.h
examples/lighting-app/talaria/talaria_aws_iot/: aws_iot.h  compile_aws_sdk.sh  subscribe_publish_sample.c
examples/lighting-app/talaria/talaria_http_client/: http_client_main.c
examples/lighting-app/talaria/talaria_mqtt/: app_mqtt.c  app_mqtt.h  main_mqtt.c
examples/lock-app/talaria/: 2_gn_load.sh  BUILD.gn  Makefile  README.md  a_gn_activate.sh  args.gni  custom_msg_exchange_group.c  custom_msg_exchange_group.h  main.cpp  test.cpp  test.rsp
examples/lock-app/talaria/data_model/: BUILD.gn  lock-app.matter  lock-app.zap
examples/lock-app/talaria/gn_links/: 4  inet
examples/lock-app/talaria/hio/: matter.h  matter_hio.c  matter_hio.h
examples/lock-app/talaria/include/: CHIPProjectAppConfig.h
examples/ota-provider-app/linux/include/: CHIPProjectAppConfig.h
examples/platform/talaria/common/: BUILD.gn  CHIPDeviceManager.cpp  CHIPDeviceManager.h  CommonDeviceCallbacks.cpp  CommonDeviceCallbacks.h  DeviceCommissioningInterface.cpp  DeviceCommissioningInterface.h  DeviceCommissioningManager.cpp  DeviceCommissioningManager.h  TEST.cpp  TEST.h  Utils.cpp  Utils.h
examples/platform/talaria/template/: .gn  BUILD.gn  Makefile  args.gni  main.cpp
examples/platform/talaria/template/include/: CHIPProjectAppConfig.h
examples/pump-app/talaria/: 1_gn_build.sh  2_gn_load.sh  3_gn_compile.sh  BUILD.gn  Dockerfile  Makefile  README.md  args.gni  entrypoint.sh  main.cpp  test.cpp
examples/pump-app/talaria/data-model/: pump-app.matter  pump-app.zap
examples/pump-app/talaria/include/: CHIPProjectAppConfig.h
examples/smoke-co-alarm-app/talaria/: 1_gn_build.sh  2_gn_load.sh  BUILD.gn  Dockerfile  Makefile  README.md  args.gni  entrypoint.sh  main.cpp  test.cpp
examples/smoke-co-alarm-app/talaria/include/: CHIPProjectAppConfig.h
examples/smoke-co-alarm-app/talaria/smoke-co-alarm-common/: smoke-co-alarm-app.matter  smoke-co-alarm-app.zap
examples/speaker/talaria/: BUILD.gn  Makefile  README.md  args.gni  main.cpp
examples/speaker/talaria/include/: CHIPProjectAppConfig.h
examples/speaker/talaria/speaker-common/: BUILD.gn  speaker-app.matter  speaker-app.zap
examples/temperature-measurement-app/talaria/: 1_gn_build.sh  2_gn_load.sh  BUILD.gn  Makefile  README.md  args.gni  main.cpp  test.cpp
examples/temperature-measurement-app/talaria/include/: CHIPProjectAppConfig.h
examples/thermostat/talaria/: BUILD.gn  Makefile  README.md  args.gni  main.cpp  test.cpp
examples/thermostat/talaria/include/: CHIPProjectAppConfig.h
examples/thermostat/talaria/thermostat-common/: thermostat.matter  thermostat.zap
examples/tv-app/talaria/: BUILD.gn  Makefile  README.md  args.gni  main.cpp  test.cpp
examples/tv-app/talaria/include/: CHIPProjectAppConfig.h
examples/tv-app/talaria/keypad-input/: KeypadInputManager.cpp
examples/tv-app/talaria/media-playback/: MediaPlaybackManager.cpp
examples/tv-app/talaria/tv-common/: BUILD.gn  tv-app.matter  tv-app.zap
examples/window-app/talaria/: 0_gn_clean.sh  1_gn_build.sh  2_gn_load.sh  BUILD.gn  Dockerfile  Makefile  README.md  args.gni  entrypoint.sh  main.cpp  test.cpp
examples/window-app/talaria/data-model/: window-app.matter  window-app.zap
examples/window-app/talaria/include/: CHIPProjectAppConfig.h
src/crypto/: CHIPCryptoPALmbedTLSCert.cpp
src/lwip/: BUILD.gn
src/platform/: BUILD.gn  device.gni
src/platform/talaria/: BLEManagerImpl.cpp  BLEManagerImpl.h  BUILD.gn  CHIPDevicePlatformConfig.h  CHIPDevicePlatformEvent.h  Config.cpp  Config.h  ConfigurationManagerImpl.cpp  ConfigurationManagerImpl.h  ConnectivityManagerImpl.cpp  ConnectivityManagerImpl.h  ConnectivityManagerImpl_WiFi.cpp  DeviceInfoProviderImpl.cpp  DeviceInfoProviderImpl.h  DiagnosticDataProviderImpl.cpp  DiagnosticDataProviderImpl.h  FactoryDataProvider.cpp  FactoryDataProvider.h  InetPlatformConfig.h  KeyValueStoreManagerImpl.cpp  KeyValueStoreManagerImpl.h  Logging.cpp  NetworkCommissioningDriver.cpp  NetworkCommissioningDriver.h  OTAImageProcessorImpl.cpp  OTAImageProcessorImpl.h  PlatformManagerImpl.cpp  PlatformManagerImpl.h  SystemPlatformConfig.h  SystemTimeSupport.cpp  TalariaConfig.cpp  TalariaConfig.h  TalariaUtils.cpp  TalariaUtils.h  args.gni  commissioning_keys.h
src/platform/talaria/hio/: matter.h  matter_hio.c
(+5 files in other folders)
