# Copyright (c) 2020 Project CHIP Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build_overrides/chip.gni")

executable("light-switch-app.elf") {
  sources = [
    "BindingHandler.h",
    "BindingHandler.cpp",
    "command_line_interface.cpp",
    "main.cpp",
    "test.cpp",
  ]

  deps = [
    "${chip_root}/examples/light-switch-app/talaria/data-model:light-switch-common",
    "${chip_root}/src/lib",
    "${chip_root}/examples/platform/talaria/common"
  ]

  include_dirs = [ 
    "${chip_root}/examples/platform/talaria",
    "inc",
  ]

  output_dir = root_out_dir

  ldflags = [  ]
  lib_dirs = [  ]
  libs = [  ]

}

group("talaria") {
  deps = [ ":light-switch-app.elf" ]
}

group("default") {
  deps = [ ":talaria" ]
}
