# Copyright (c) 2020 Project CHIP Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# CHIPProjectConfig.h

import("//build_overrides/chip.gni")
import("//build_overrides/build.gni")
import("${chip_root}/build_overrides/talaria.gni")
import("${chip_root}/config/talaria/common.gni")

declare_args() {
  is_debug = false
  config_enable_talaria_factory_data_provider = false
  config_enable_talaria_device_instance_info_provider = false

  default_configs_pie = [ "${chip_root}/config/talaria/:ldflags" ]
}

chip_project_config_include_dirs += [
  "${chip_root}/examples/light-switch-app/talaria/include",
]
