# Copyright (c) 2020 Project CHIP Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build_overrides/chip.gni")
import("//out/test/args.gn")

executable("lock-app.elf") {
  sources = [
    "custom_msg_exchange_group.c",
    "custom_msg_exchange_group.h",
    "main.cpp",
    "test.cpp",
  ]

  deps = [
    "${chip_root}/examples/lock-app/talaria/data_model",
    "${chip_root}/src/lib",
    "${chip_root}/examples/platform/talaria/common"
  ]

  include_dirs = [ 
    "${chip_root}/examples/platform/talaria",
    "${chip_root}/src/platform/talaria",
  ]

  output_dir = root_out_dir

  defines = []
  if (config_enable_talaria_factory_data_provider == true) {
    defines += ["CONFIG_ENABLE_TALARIA_FACTORY_DATA_PROVIDER=1",]
  }

  if (config_enable_talaria_device_instance_info_provider == true) {
    defines += ["CONFIG_ENABLE_TALARIA_DEVICE_INSTANCE_INFO_PROVIDER=1",]
  }

  ldflags = [  ]
  lib_dirs = [ 
    "${chip_root}/third_party/talaria/repo/freertos_sdk/libs",
  ]
  libs = [ 
  "hio",
  ]

}

group("talaria") {
  deps = [ ":lock-app.elf" ]
}

group("default") {
  deps = [ ":talaria" ]
}
