import("//build_overrides/chip.gni")
import("//build_overrides/build.gni")
import("${chip_root}/build_overrides/talaria.gni")
import("${chip_root}/config/talaria/common.gni")

declare_args() {
  is_debug = false
  chip_enable_ota_requestor = true

  default_configs_pie = [ "${chip_root}/config/talaria/:ldflags" ]
}

chip_project_config_include_dirs += [
  "${chip_root}/examples/lighting-app/talaria/include",
]